@@ -48,8 +48,9 @@ postgresql-common (80) UNRELEASED; urgency=low
     they are newer than the latest officially supported version. This avoids
     confusion when testing new betas in experimental or using backports.
     (Closes: #446635)
+  * t/TestLib.pm: Make exec_as() work with user name 'root' (not just uid 0).
 
- -- Martin Pitt <mpitt@debian.org>  Sun, 21 Oct 2007 11:32:32 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sun, 21 Oct 2007 14:01:52 +0200
 
 postgresql-common (79) unstable; urgency=low
 
